--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -120,7 +120,7 @@
     justify-content: center !important;
     align-items: center !important;
     margin-right: 60px;
-    height: 100%;
+    height: 100% !important;
     .appointment-btn {
         background: $black;
         padding: 15px 20px;
